Improved readability of CSS styles in the footer and header component, also reduced header component weight to avoid warnings during ng build execution

--- a/src/app/domains/shared/components/footer/footer.component.scss
+++ b/src/app/domains/shared/components/footer/footer.component.scss
@@ -1,15 +1,8 @@
+@import "../../../../../styles/bases/mixins.scss";
 @import "../../../../../styles/bases/variables.scss";
 
-@mixin line {
-  width: 100%;
-  height: 0.06em;
-  background-color: #343334;
-}
-
 .footer {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  @include flex-col-center();
   width: 100%;
   padding: 4em 0;
   background-color: #1d1c1e;
@@ -22,16 +15,12 @@
     gap: 2.5em;
 
     .container__navigation {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
+      @include flex-col-center();
       gap: 2em;
     }
 
     .container__info {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
+      @include flex-col-center();
       gap: 2.5em;
     }
   }
