--- a/src/styles/bases/mixins.scss
+++ b/src/styles/bases/mixins.scss
@@ -9,3 +9,15 @@
   white-space: nowrap;
   border-width: 0;
 }
+
+@mixin flex-col-center {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+@mixin line {
+  width: 100%;
+  height: 0.06em;
+  background-color: #343334;
+}
